Revise README for improved clarity and detail
Updated README to enhance project description and features.